@@ -1,18 +1,18 @@
 #-*- mode: shell-script; tab-width: 4; -*-
 
 FWB_MAJOR_VERSION=4
-FWB_MINOR_VERSION=0
-FWB_MICRO_VERSION=2
+FWB_MINOR_VERSION=1
+FWB_MICRO_VERSION=0
 
 # VERSION must be a string rather than $var because of the build scripts
-VERSION="4.0.2"
-SHORTVERSION="402"
+VERSION="4.1.0"
+SHORTVERSION="410"
 
 # RELEASE="1"
 RELEASE="b@BUILD_NUM@"
 
 BETA="no"
 
-REQUIRED_LIBFWBUILDER_VERSION="4.0.2"
+REQUIRED_LIBFWBUILDER_VERSION="4.1.0"
 
 
