@@ -656,11 +656,11 @@
               </widget>
               <widget class="QWidget" name="page_35">
                <layout class="QGridLayout" name="gridLayout_40">
-                <property name="horizontalSpacing">
-                 <number>6</number>
-                </property>
                 <property name="margin">
                  <number>0</number>
+                </property>
+                <property name="horizontalSpacing">
+                 <number>6</number>
                 </property>
                 <item row="0" column="0">
                  <widget class="MetricEditorPanel" name="w_MetricEditorPanel" native="true"/>
@@ -736,7 +736,7 @@
      <x>0</x>
      <y>0</y>
      <width>1144</width>
-     <height>22</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="editMenu">
@@ -1281,10 +1281,10 @@
   </action>
   <action name="DiscoveryDruidAction">
    <property name="text">
-    <string>Discovery Druid</string>
+    <string>Object Discovery</string>
    </property>
    <property name="iconText">
-    <string>Discovery Druid</string>
+    <string>Object Discovery</string>
    </property>
   </action>
   <action name="new_itemAction">
